[tool.poetry]
name = "PLS"
version = "0.1.0"
description = ""
authors = ["OMS <opro1226@naver.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plspm = "^0.5.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
